--- a/web.config
+++ b/web.config
@@ -1,4 +1,4 @@
-﻿<!-- 
+<!-- 
      This configuration file is required if iisnode is used to run node processes behind
      IIS or IIS Express.  For more information, visit:
 
@@ -10,7 +10,7 @@
      <system.webServer>
           <handlers>
                <!-- indicates that the app.js file is a node.js application to be handled by the iisnode module -->
-               <add name="iisnode" path="server.js" verb="*" modules="iisnode"/>
+               <add name="iisnode" path="web.js" verb="*" modules="iisnode"/>
           </handlers>
           <rewrite>
                <rules>
@@ -35,7 +35,7 @@
                          <conditions>
                               <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
                          </conditions>
-                         <action type="Rewrite" url="server.js"/>
+                         <action type="Rewrite" url="web.js"/>
                     </rule>
 
                </rules>
