--- a/web.config
+++ b/web.config
@@ -22,7 +22,7 @@
 
                 <!-- Don't interfere with requests for node-inspector debugging -->
                 <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">                    
-                    <match url="^server.js\/debug[\/]?" />
+                    <match url="^web.js\/debug[\/]?" />
                 </rule>
 
                     <!-- First we consider whether the incoming URL matches a physical file in the /public folder -->
