--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "node-uuid": ">= 1.3.3",
     "everyauth": ">= 0.2.29",
     "nconf": ">= 0.5.1",
-    "express": ">= 2.5.0",
+    "express": "= 2.5.11",
+    "nodemailer": ">= 0.3.21",
     "jade": ">= 0.18.0",
     "less": ">= 1.1.5",
     "socket.io": ">= 0.8.7",
