--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
       "email": "me"
     } 
   ],  
-  "main": "./server.js",
+  "main": "./web.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MicrosoftWebMatrix/ExpressStarter.git"
+    "url": "https://github.com/my-crazymind/express_site_test.git"
   },
   "keywords": [
     "azure",
@@ -34,6 +34,6 @@
   "noAnalyze": true,
   "license": "Apache",
   "engines": {
-    "node": "=0.6.14"
+    "node": ">=0.6.14"
   }
 }
