--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "jade": ">= 0.18.0",
     "less": ">= 1.1.5",
     "socket.io": ">= 0.8.7",
+    "MD5" : "= 1.0.0",
     "connect": ">=1.8.5",
+    "mongodb": ">=1.0.2",
     "recaptcha": ">=1.1.0"
   },
   "noAnalyze": true,
