--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "ExpressStarterServer",
-  "version": "0.5.0",
-  "subdomain": "express_starter",
+  "version": "0.5.0-13",
+  "subdomain": "expresstestmy123",
   "author": "crazymind",
   "description": "some sample func built on express",
-  "scripts": {
-    "start": "web.js"
-  },
-  "contributors": [ 
+  "contributors": [
     {
       "name": "me",
       "email": "me"
-    } 
-  ],  
+    }
+  ],
   "main": "./web.js",
   "repository": {
     "type": "git",
@@ -23,7 +20,10 @@
     "boilerplate",
     "express"
   ],
-  "dependencies" : {
+  "scripts": {
+    "start": "web.js"
+  },
+  "dependencies": {
     "node-uuid": ">= 1.3.3",
     "everyauth": ">= 0.2.29",
     "nconf": ">= 0.5.1",
@@ -32,13 +32,13 @@
     "jade": ">= 0.18.0",
     "less": ">= 1.1.5",
     "socket.io": ">= 0.8.7",
-    "MD5" : "= 1.0.0",
+    "MD5": "= 1.0.0",
     "connect": ">=1.8.5",
     "mongoose": ">=2.7.2",
     "recaptcha": ">=1.1.0"
   },
   "noAnalyze": true,
-  "license": "Apache",
+  "license": "MIT",
   "engines": {
     "node": ">=0.6.14"
   }
