--- a/web.config
+++ b/web.config
@@ -19,10 +19,10 @@
                          <match url="^[a-zA-Z0-9_\-]+\.js\.logs\/\d+\.txt$"/>
                     </rule>
 
-                <!-- Don't interfere with requests for node-inspector debugging -->
+                <!-- Don't interfere with requests for node-inspector debugging >
                 <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">                    
                     <match url="^web.js\/debug[\/]?" />
-                </rule>
+                </rule-->
 
                     <!-- First we consider whether the incoming URL matches a physical file in the /public folder -->
                     <rule name="StaticContent">
