--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+App_Data
 node_modules
 uploads
 public/user_uploads
@@ -7,3 +8,4 @@ server.js.debug
 web.js.logs
 web.js.debug
 settings.json
+robots.txt
